<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/diglog_back_drawable"
    android:padding="5dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_text_color"
            android:textStyle="bold"
            android:textSize="19sp"
            android:gravity="center"
            android:text="@string/dialog_title" />

        <TextView
            style="@style/content_text_style"
            android:layout_marginTop="10dip"
            android:layout_width="match_parent"
            android:text="@string/dialog_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@color/login_diglog_delims" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip">

        <TextView
            android:id="@+id/dialog_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:paddingLeft="40dip"
            android:paddingRight="40dip"
            android:clickable="true"
            android:text="@string/dialog_btn"
            android:textColor="@color/btn_text_color"
            android:background="@drawable/s_gridmenu_selected"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>